Make sure we can explore graph with overflow

--- a/appengine/css/queryvis.css
+++ b/appengine/css/queryvis.css
@@ -74,6 +74,10 @@ rect.background {
 
 /* Graph */
 
+.query-plan {
+  overflow-x: scroll;
+}
+
 .graph {
   shape-rendering: auto;
 }
